hello1/deployment-canary.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hello1
        environment: pro
        release: canary
    spec:
      containers:
        - name: hello1
          image: "registry.spain.schibsted.io/k8s-hello1:latest"
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 1
